Fixing capitalization of FACA affiliation labels; abbreviations without caps were hard to read.

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -509,3 +509,4 @@ table .even.numerous{
     margin-bottom: 10px;
 }
 
+.withCaps { text-transform: none; }
